--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-snap": "^1.23.0",
     "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
   },
